# dri-geospatial-utils

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: Makefile  conf.py
docs/sources/: modules.rst  mypackage.rst
src/geospatial_utils/: __init__.py  __main__.py
src/geospatial_utils/raster/: raster_boundary.py  raster_dataset.py  reprojection.py
src/geospatial_utils/tools/: convert_to_cog.py  template.py
src/geospatial_utils/tools/cli/: main.py
src/geospatial_utils/vector/: constants.py  io.py  types.py  vector_dataset.py
tests/: conftest.py
tests/data/inputs/: test_raster_3857_cog_greyscale.tif
tests/data/inputs/raster/: test_raster_3857.tif  test_raster_3857.tif.aux.xml
tests/data/inputs/vector/: test_vector_4326.geojson
tests/data/outputs/raster/raster_boundary/: footprint.geojson
tests/data/outputs/raster/reprojection/: test_raster_4326.tif
tests/data/temp/: test.geojson
tests/testing_utils/: exceptions.py  file_comparison.py
tests/tests/: test_raster_boundary.py  test_reproject_raster.py
tests/tests/raster/: test_raster_dataset.py  test_reproject_raster.py
tests/tests/tools/: test_convert_to_cog.py
tests/tests/vector/: test_io.py  test_vector_dataset.py
