[build-system]
requires = ["setuptools >= 61.0,<81","autosemver"]

[project]
requires-python = ">=3.12"
dependencies = [
    "autosemver",
    "setuptools >= 61.0,<81",
    "pre-commit",

]
name = "geospatial_utils"
dynamic = ["version"]
authors = [{ name = "Samantha Hewkin", email = "samhew@ceh.ac.uk" }]
description = "A minimal setup for a template package."

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]


[tool.setuptools.dynamic]
version = { attr = "geospatial_utils.__version__" }

[tool.pytest.ini_options]
addopts = "--cov=geospatial_utils"
markers = [
    "slow: Marks slow tests",
]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.coverage.run]
omit = ["*__init__.py", "src/geospatial_utils/__main__.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "A", "PLC", "PLE", "PLW", "I", "N816", "ANN001", "ANN201", "ANN202", "ANN205", "ANN206"]

[tool.ruff.lint.flake8-type-checking]
strict = true
